# MpiRmaExamples

./: .gitignore  README.md
01_opperations_on_array/: CMakeLists.txt  main.cpp
01_opperations_on_array/input_files/: array_proc_1.txt  array_proc_2.txt  array_proc_3.txt  array_proc_4.txt
01_opperations_on_array/src/: array_opp.cpp  array_opp.h
